completed header, footer,login,register,pagenotfound|did some home elements

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,41 @@
-<p>footer works!</p>
+<div class="container-fluid bg-success p-5" style="height: 400px;">
+    <div class="row">
+        <div class="col-md-4 ">
+            <h3>
+                <a routerLink="/" class="navbar-brand text-white">
+                <i class="fa-solid fa-kitchen-set me-2"></i>CookPedia</a>
+            </h3>
+            <p class="text-white me-2 text-justify mt-3">Discover 100+ Recipe in your hand with the best recipes Help you to find the easiest way to cook</p>
+
+        </div>
+        <div class="col-md-3"></div>
+        <div class="col-md-5 ">
+            <h3 class="text-light">Sign up for our news letter</h3>
+            <div class="d-flex mt-3">
+                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Email Please">
+                <button class="btn btn-warning ms-2 ">Subscribe</button>
+            </div>
+            <div class="row text-white mt-4">
+                <div class="col-4">
+                    <h4>Menu</h4>
+                    <p class="mt-3">Home</p>
+                    <p>Contact</p>
+                    <p>Recipe</p>
+                </div>
+                <div class="col-4">
+                    <h4>Help</h4>
+                    <p class="mt-3">Privacy & Policy</p>
+                    <p>Tearms of use</p>
+                </div>
+                <div class="col-4">
+                    <h4>Social</h4>
+                    <p class="mt-3">Facebook</p>
+                    <p>Instagarm</p>
+                    <p>Twitter</p>
+                    <p>Youtube</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
