--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,18 @@
-<p>home works!</p>
+<app-header></app-header>
+
+<div class="container">
+    <div class="row p-5 bg-success">
+        <div class="col-md-2"></div>
+        <div class="col-md-4 text-white">
+            <h1>The Easiest Way <br>
+                To Make Your <br>
+                Favourite Meal</h1>
+                <p>Discover 100+ Recipies in your hand with the best recipes. Help you to find the easiest way to cook</p>
+                <button class="btn btn-warning mt-5">Explore Recipies</button>
+        </div>
+        <div class="col-md-6">
+            <img id="landingImg" src="plate.png" alt="No Image" style="width:100%; border-radius: 400px;">
+        </div>
+    </div>
+
+</div>
