--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,37 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg bg-success mt-5 container">
+    <div class="container-fluid">
+        <a routerLink="/" class="navbar-brand text-white">
+            <i class="fa-solid fa-kitchen-set me-2"></i>CookPedia</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link text-white " aria-current="page">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white " aria-current="page">Recipe</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white " aria-current="page">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white " aria-current="page">Contact</a>
+                </li>
+
+            </ul>
+            <div class="dropdown ms-auto">
+                <button class="btn btn-outline-light dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    <i class="fa-solid fa-user me-2"></i>
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" routerLink="/login">Login</a></li>
+                    <li><a class="dropdown-item" routerLink="/register">Register</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</nav>
