--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,26 @@
-<p>login works!</p>
+<div class="container d-flex justify-content-center align-items-center" style="height: 90vh;">
+    <div class="row w-100">
+        <div class="col-md-3"></div>
+        <div class="col-md-6 d-flex align-items-center justify-content-center flex-column p-4">
+            <h1>Login</h1>
+            <p class="mt-4">More than 100+ recipe around the world</p>
+             <form  class="p-5 shadow rounded w-100" >
+                <h1 class="text-center"><a routerLink="/" class="navbar-brand text-dark">
+            <i class="fa-solid fa-kitchen-set me-2"></i>CookPedia</a></h1>
+            <div class="mb-3">
+                <input type="text" placeholder="Email" class="form-control">
+            </div>
+            <div class="mb-5">
+                <input type="text" placeholder="Password" class="form-control">
+            </div>
+            <div class="mb-4">
+                <button class="btn btn-success w-100">Login</button>
+            </div>
+            <div class="mb-3">
+                <p>New user ? <a routerLink="/register" class="text-success">Register</a></p>
+            </div>
+            </form>
+        </div>
+        <div class="col-md-3"></div>
+    </div>
+</div>
