--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,36 @@
-<p>register works!</p>
+<div class="container d-flex justify-content-center align-items-center" style="height: 90vh;">
+    <div class="row w-100 align-items-center">
+        <div class="col-5">
+            <form  class="p-4 shadow rounded" >
+                <h1><a routerLink="/" class="navbar-brand text-dark">
+            <i class="fa-solid fa-kitchen-set me-2"></i>CookPedia</a></h1>
+            <div class="mb-3 mt-5">
+                <input type="text" placeholder="Username" class="form-control">
+            </div>
+            <div class="mb-3">
+                <input type="text" placeholder="Email" class="form-control">
+            </div>
+            <div class="mb-5">
+                <input type="text" placeholder="Password" class="form-control">
+            </div>
+            <div class="mb-4">
+                <button class="btn btn-success w-100">Register</button>
+            </div>
+            <div class="mb-3">
+                <p>Auldrad a user ? <a routerLink="/login" class="text-success">Login</a></p>
+            </div>
+            </form>
+        </div>
+        <div class="col-2"></div>
+        <div class="col-5">
+            <h1>Create An Acccount </h1>
+            <h5>What will you get ?</h5>
+            <ul class="mt-5">
+                <li>Differnet Recipe</li>
+                <li>Easy way to CookPedia</li>
+                <li>Save your favourate Recipe</li>
+                <li>Download your Recipe</li>
+            </ul>
+        </div>
+    </div>
+</div>
