completed Home page | recipe page completed |completed about,contact

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,31 @@
-<p>about works!</p>
+<app-header></app-header>
+<div class="container ">
+    <div class="row">
+        <div class="col-md-6 bg-success d-flex  justify-content-center align-item-center p-5">
+            <img src="https://www.pngkit.com/png/full/87-870696_sabzigadi-story-organic-cookbook-healthy-and-delicious-food.png" alt="no image"
+            class="">
+        </div>
+        <div class="col-md-6 d-flex  justify-content-center align-item-center p-5 flex-column">
+            <h1>Welcome To Cookpedia</h1>
+            <p class="mt-4">Discover 100+ recipes in your hand with the best recipe Help to find easiest way to cook.</p>
+        </div>
+    </div>
+    <div class="row my-5">
+        <div class="col-md-6 ">
+            <h6>About</h6>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus aliquid eaque possimus tenetur natus eligendi doloremque minima alias obcaecati dicta, magnam vero quae dignissimos debitis a? Hic accusantium corporis vero.
+             laborum blanditiis sunt fugiat magnam molestiae totam quidem? Iste alias vel quisquam.</p>
+                <ul>
+                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </li>
+                    <li>optio ducimus cum laboriosam eveniet omnis libero! Corporis</li>
+                    <li> commodi amet architecto, impedit aut est omnis quaerat </li>
+                    <li>repellat officia nulla, accusamus molestias iste.</li>
+                </ul>
+                <button class="btn btn bg-success">Know more about us</button>
+        </div>
+        <div class="col-md-6 d-flex  justify-content-center align-item-center">
+            <img src="https://static.vecteezy.com/system/resources/thumbnails/046/822/681/small_2x/a-chef-in-uniform-holding-a-tray-of-food-isolated-on-a-transparent-background-png.png" alt="no Image"
+            >
+        </div>
+    </div>
+</div>
