--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,94 @@
-<p>contact works!</p>
+<app-header></app-header>
+<div class="container text-white bg-success p-5 d-flex justify-content-center align-items-center flex-column"
+    style="height: 300px;">
+    <h1>Contact Us</h1>
+    <p class="text-center mt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero architecto quibusdam quo
+        quasi <br>
+        cum aliquid quae consequuntur totam adipisci modi distinctio, doloremque <br>
+        corporis possimus sint laborum, debitis, veritatis omnis voluptatibus.</p>
+
+</div>
+
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-4">
+            <h1>Get In Touch</h1>
+            <p class="mt-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia earum aspernatur dolorem
+                vero laborum! Ipsa illum aspernatur, distinctio alias eveniet minus quibusdam libero aliquam! Alias
+                voluptatibus maiores odit laboriosam expedita!</p>
+            <div class="">
+                <div class="d-flex mt-3 align-items-center justify-content-center">
+                    <div style="width: 40px;height: 40px;border-radius: 50%;"
+                        class="bg-success text-white d-flex align-items-center justify-content-center">
+                        <i class="fa-solid fa-location-crosshairs "></i>
+                    </div>
+                    <div class="ms-4">
+                        <p>Address</p>
+                        <p>NY4569,po berlin</p>
+                    </div>
+                </div>
+                <div class="d-flex mt-3 align-items-center justify-content-center">
+                    <div style="width: 40px;height: 40px;border-radius: 50%;"
+                        class="bg-success text-white d-flex align-items-center justify-content-center">
+                        <i class="fa-solid fa-envelope"></i>
+                    </div>
+                    <div class="ms-4">
+                        <p>Email</p>
+                        <p>aialidemail.com</p>
+                    </div>
+                </div>
+                <div class="d-flex mt-3 align-items-center justify-content-center">
+                    <div style="width: 40px;height: 40px;border-radius: 50%;"
+                        class="bg-success text-white d-flex align-items-center justify-content-center">
+                        <i class="fa-solid fa-phone"></i>
+                    </div>
+                    <div class="ms-4">
+                        <p>Phone</p>
+                        <p>4597333345788</p>
+                    </div>
+                </div>
+                <hr>
+                <h3>Follow Us</h3>
+                <div class="d-flex my-4">
+                    <div style="width: 40px;height: 40px;border-radius: 50%;"
+                        class="bg-success text-white ms-3 d-flex align-items-center justify-content-center">
+                        <i class="fa-brands fa-facebook"></i>
+                        
+                    </div>
+                    <div style="width: 40px;height: 40px;border-radius: 50%;"
+                        class="bg-success text-white ms-3 d-flex align-items-center justify-content-center">
+                        <i class="fa-brands fa-twitter"></i>
+                        
+                    </div>
+                    <div style="width: 40px;height: 40px;border-radius: 50%;"
+                        class="bg-success text-white ms-3 d-flex align-items-center justify-content-center">
+                        <i class="fa-brands fa-whatsapp"></i>
+                        
+                    </div>
+                    <div style="width: 40px;height: 40px;border-radius: 50%;"
+                        class="bg-success text-white ms-3 d-flex align-items-center justify-content-center">
+                        <i class="fa-brands fa-youtube"></i>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-4">
+            <form class="p-5 rounded shadow">
+                <h2>Client Testimony</h2>
+                <div class="my-4"><input type="text" placeholder="name" class="form-control"></div>
+                <div class="mb-4"><input type="text" placeholder="email" class="form-control"></div>
+                <div class="mb-4"><textarea class="form-control" name="" id="" placeholder="message"></textarea></div>
+                <p class="md-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia ducimus quod magnam modi sed nam magni deleniti porro dolorum? Excepturi quibusdam quia error placeat at nulla neque culpa assumenda laudantium.</p>
+                <button class="btn btn-success">Submit</button>
+            </form>
+        </div>
+        <div class="col-md-1"></div>
+    </div>
+</div>
+
+<div class="container my-5">
+    <iframe class="w-100" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d59755.02113383065!2d76.30948095113635!3d10.008813464705796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b080c8e94a07a07%3A0x49921cdfae82660!2sKakkanad%2C%20Kerala!5e1!3m2!1sen!2sin!4v1748943410475!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
