--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,16 +9,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link text-white " aria-current="page">Home</a>
+                    <a routerLink="/" class="nav-link text-white " aria-current="page">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white " aria-current="page">Recipe</a>
+                    <a routerLink="/all-recipes" class="nav-link text-white " aria-current="page">Recipe</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white " aria-current="page">About</a>
+                    <a routerLink="/about" class="nav-link text-white " aria-current="page">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white " aria-current="page">Contact</a>
+                    <a routerLink="/contact" class="nav-link text-white " aria-current="page">Contact</a>
                 </li>
 
             </ul>
