--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -1,1 +1,54 @@
-<p>recipe works!</p>
+<app-header></app-header>
+
+<div class="container mt-5 mb-5">
+    <div class="row">
+        <div class="col-md-4">
+            <h4 class="mt-5">Filter</h4>
+            <div class="mt-4">
+                <button class="btn ">All</button>
+                <div class="dropdown mt-5">
+                    <button class="btn  dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Cuisine
+                    </button>
+                    <div class="dropdown-menu border-0">
+                        <button class="btn">Italian</button>
+                    </div>
+                </div>
+                <div class="dropdown mt-5">
+                    <button class="btn  dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        MealType
+                    </button>
+                    <div class="dropdown-menu border-0">
+                        <button class="btn">Dinner</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-8">
+            <div class="d-flex justify-content-between">
+                <h1>All Recipes</h1>
+                <input type="text" placeholder="search recipes Here!" class="form-control w-50">
+            </div>
+            <div class="row my-5">
+                <div class="col-md-4 p-3">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRjSfAr8B3D8-L9UT6Lx8ENlEY8VJFsvNoRhA&s"
+                        alt="no image" class="w-100 rounded">
+                    <h4 class="mt-2">Nadan Sadya</h4>
+                    <p>cuisne:Indian</p>
+                </div>
+                <div class="col-md-4 p-3">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRjSfAr8B3D8-L9UT6Lx8ENlEY8VJFsvNoRhA&s"
+                        alt="no image" class="w-100 rounded">
+                    <h4 class="mt-2">Nadan Sadya</h4>
+                    <p>cuisne:Indian</p>
+                </div>
+                <div class="col-md-4 p-3">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRjSfAr8B3D8-L9UT6Lx8ENlEY8VJFsvNoRhA&s"
+                        alt="no image" class="w-100 rounded">
+                    <h4 class="mt-2">Nadan Sadya</h4>
+                    <p>cuisne:Indian</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
