implemented api for registration

--- a/src/app/view-recipe/view-recipe.component.html
+++ b/src/app/view-recipe/view-recipe.component.html
@@ -1,1 +1,75 @@
-<p>view-recipe works!</p>
+<app-header></app-header>
+
+<div class="container mt-5 ">
+    <div class="row align-items-start ">
+        <div class="col-md-6 mb-4">
+            <a href="#" class="text-primary mb-4 d-inline-block ">Back to all Recipes</a>
+            <img src="https://m.media-amazon.com/images/I/51oSPPZ-NwL.jpg" alt="Caipirinha"
+                class=" rounded shadow "  >
+            <div class="my-5 d-flex justify-content-between align-items-center ">
+                <button class="btn text-white bg-success rounded px-4">Download Recipe</button>
+                <button class="btn text-white bg-primary rounded px-4">Save Recipe</button>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <h1 class="mb-3">Brazilian Caipirinha</h1>
+            <div class="row text-center mb-4">
+                <div class="col-md-4 my-3">
+                    <h6 class="mb-4 mt-3"><strong>Cuisine:</strong> Brazilian</h6>
+                    <img width="50px" height="50px"
+                        src="https://png.pngtree.com/png-vector/20230815/ourmid/pngtree-clock-icon-simple-flat-vector-png-image_9182653.png"
+                        alt="">
+                    <p class="mt-2 mb-2">Preparation Time:</p>
+                    <p><span class="text-danger fw-bold ">5</span> minutes</p>
+                </div>
+                <div class="col-md-4 my-3">
+                    <h6 class="mb-4 mt-3"><strong>Serving:</strong> 1</h6>
+                    <img width="70px" height="50px" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTIj1whjXvMLPjEeUpVmThtPsmLUtbkF7nkKWzwlW1Zo7Z1Fx-D" alt="">
+                    <p class="mt-2 mb-2">Cooking Time:</p>
+                    <p><span class="text-danger fw-bold">0</span> minutes</p>
+                </div>
+                <div class="col-md-4 my-3">
+                    <h6 class="mb-4 mt-3"><strong>Mode of Cooking:</strong> Easy</h6>
+                    <img width="40px" class="mb-2" height="40px" src="https://cdn-icons-png.flaticon.com/512/723/723687.png" alt="">
+                    <p class="mt-2 mb-2">Calories per Serving:</p>
+                    <p><span class="text-danger fw-bold">150</span> minutes</p>
+                </div>
+            </div>
+            <h3 class="mb-4 mt-3">Ingredients Needed</h3>
+            <ol>
+                <li>Cachaça (Brazilian sugarcane spirit)</li>
+                <li>Lime, cut into wedges</li>
+                <li>Granulated sugar</li>
+                <li>Ice cubes</li>
+            </ol>
+            <h3 class="mt-5 mb-4">Cooking Instructions</h3>
+            <ul>
+                <li>In a glass, muddle lime wedges with granulated sugar to release the juice.</li>
+                <li>Fill the glass with ice cubes.</li>
+                <li>Pour cachaça over the ice and stir well.</li>
+                <li>Sip and enjoy the refreshing taste of the Brazilian Caipirinha!</li>
+                <li>Adjust sugar and lime to suit your taste preferences.</li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <h3 class="mb-4">Belated Recipes</h3>
+            <div class="d-flex justify-content-start gap-4">
+                <div class="text-center">
+                    <img src="https://img.cdn4dd.com/p/fit=cover,width=1200,height=1200,format=auto,quality=90/media/photosV2/42656838-2fac-475e-9bb4-5e24fdbdd6d7-retina-large.jpeg"
+                        alt="Blueberry Smoothie" class="img-fluid rounded shadow" style="width: 250px; height: 280px;">
+                    <p class="mt-2 fw-medium">Blueberry Banana Smoothie</p>
+                </div>
+                <div class="text-center">
+                    <img src="https://indiacuisine.net/cdn/shop/articles/mango_lassi.jpg?v=1745427325"
+                        alt="Mango Smoothie" class="img-fluid rounded shadow" style="width: 250px; height: 280px;">
+                    <p class="mt-2 fw-medium">Mango Lassi Smoothie</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
