--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,24 +1,35 @@
 <div class="container d-flex justify-content-center align-items-center" style="height: 90vh;">
     <div class="row w-100 align-items-center">
         <div class="col-5">
-            <form  class="p-4 shadow rounded" >
+            <form [formGroup]="registerForm" (ngSubmit)="register()" class="p-4 shadow rounded">
                 <h1><a routerLink="/" class="navbar-brand text-dark">
-            <i class="fa-solid fa-kitchen-set me-2"></i>CookPedia</a></h1>
-            <div class="mb-3 mt-5">
-                <input type="text" placeholder="Username" class="form-control">
-            </div>
-            <div class="mb-3">
-                <input type="text" placeholder="Email" class="form-control">
-            </div>
-            <div class="mb-5">
-                <input type="text" placeholder="Password" class="form-control">
-            </div>
-            <div class="mb-4">
-                <button class="btn btn-success w-100">Register</button>
-            </div>
-            <div class="mb-3">
-                <p>Auldrad a user ? <a routerLink="/login" class="text-success">Login</a></p>
-            </div>
+                        <i class="fa-solid fa-kitchen-set me-2"></i>CookPedia</a></h1>
+                <div class="mb-3 mt-5">
+                    <input name="username" type="text" formControlName="username" placeholder="Username"
+                        class="form-control">
+                    @if(registerForm.get('username')?.errors && registerForm.get('username')?.touched){
+                    <span class="text-danger" style="font-size: 10px;">Input value must be alphabetc</span>
+                    }
+                </div>
+                <div class="mb-3">
+                    <input name="email" type="text" formControlName="email" placeholder="Email" class="form-control">
+                    @if(registerForm.get('username')?.errors && registerForm.get('username')?.touched){
+                    <span class="text-danger" style="font-size: 10px;">Input value must be an email</span>
+                    }
+                </div>
+                <div class="mb-5">
+                    <input name="password" type="text" formControlName="password" placeholder="Password"
+                        class="form-control">
+                    @if(registerForm.get('username')?.errors && registerForm.get('username')?.touched){
+                    <span class="text-danger" style="font-size: 10px;">Input value must be and numbers</span>
+                    }
+                </div>
+                <div class="mb-4">
+                    <button type="submit" class="btn btn-success w-100">Register</button>
+                </div>
+                <div class="mb-3">
+                    <p>Auldrad a user ? <a routerLink="/login" class="text-success">Login</a></p>
+                </div>
             </form>
         </div>
         <div class="col-2"></div>
