--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -13,14 +13,14 @@
                 </div>
                 <div class="mb-3">
                     <input name="email" type="text" formControlName="email" placeholder="Email" class="form-control">
-                    @if(registerForm.get('username')?.errors && registerForm.get('username')?.touched){
+                    @if(registerForm.get('email')?.errors && registerForm.get('email')?.touched){
                     <span class="text-danger" style="font-size: 10px;">Input value must be an email</span>
                     }
                 </div>
                 <div class="mb-5">
                     <input name="password" type="text" formControlName="password" placeholder="Password"
                         class="form-control">
-                    @if(registerForm.get('username')?.errors && registerForm.get('username')?.touched){
+                    @if(registerForm.get('password')?.errors && registerForm.get('password')?.touched){
                     <span class="text-danger" style="font-size: 10px;">Input value must be and numbers</span>
                     }
                 </div>
