--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,17 +4,23 @@
         <div class="col-md-6 d-flex align-items-center justify-content-center flex-column p-4">
             <h1>Login</h1>
             <p class="mt-4">More than 100+ recipe around the world</p>
-             <form  class="p-5 shadow rounded w-100" >
+             <form [formGroup]="loginForm" (ngSubmit)="login()" class="p-5 shadow rounded w-100" >
                 <h1 class="text-center"><a routerLink="/" class="navbar-brand text-dark">
             <i class="fa-solid fa-kitchen-set me-2"></i>CookPedia</a></h1>
             <div class="mb-3">
-                <input type="text" placeholder="Email" class="form-control">
+                <input name="email" formControlName="email" type="text" placeholder="Email" class="form-control">
+                @if(loginForm.get('email')?.errors && loginForm.get('email')?.touched){
+                    <span class="text-danger" style="font-size: 10px;">Input value must be an email</span>
+                    }
             </div>
             <div class="mb-5">
-                <input type="text" placeholder="Password" class="form-control">
+                <input name="password" formControlName="password" type="text" placeholder="Password" class="form-control">
+                @if(loginForm.get('username')?.errors && loginForm.get('username')?.touched){
+                    <span class="text-danger" style="font-size: 10px;">Input value must be and numbers</span>
+                    }
             </div>
             <div class="mb-4">
-                <button class="btn btn-success w-100">Login</button>
+                <button type="submit" class="btn btn-success w-100">Login</button>
             </div>
             <div class="mb-3">
                 <p>New user ? <a routerLink="/register" class="text-success">Register</a></p>
