--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -6,12 +6,14 @@
             <h4 class="mt-5">Filter</h4>
             <div class="mt-4">
                 <button class="btn ">All</button>
-                <div class="dropdown mt-5">
+                <div class="dropdown mt-5 ">
                     <button class="btn  dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Cuisine
                     </button>
                     <div class="dropdown-menu border-0">
-                        <button class="btn">Italian</button>
+                        @for (item of cusineType; track $index) {
+                        <button class="btn">{{item}}</button>
+                        }
                     </div>
                 </div>
                 <div class="dropdown mt-5">
@@ -19,7 +21,9 @@
                         MealType
                     </button>
                     <div class="dropdown-menu border-0">
-                        <button class="btn">Dinner</button>
+                        @for (item of mealType; track $index) {
+                        <button class="btn">{{item}}</button>
+                        }
                     </div>
                 </div>
             </div>
@@ -30,24 +34,18 @@
                 <input type="text" placeholder="search recipes Here!" class="form-control w-50">
             </div>
             <div class="row my-5">
+                @if (allRecipes.length>0) {
+                    @for (item of allRecipes; track $index) {
                 <div class="col-md-4 p-3">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRjSfAr8B3D8-L9UT6Lx8ENlEY8VJFsvNoRhA&s"
+                    <img [src]="item.image"
                         alt="no image" class="w-100 rounded">
-                    <h4 class="mt-2">Nadan Sadya</h4>
-                    <p>cuisne:Indian</p>
+                    <h4 class="mt-2">{{item.name}}</h4>
+                    <p><b>Cuisne: </b>{{item.cuisine}}</p>
                 </div>
-                <div class="col-md-4 p-3">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRjSfAr8B3D8-L9UT6Lx8ENlEY8VJFsvNoRhA&s"
-                        alt="no image" class="w-100 rounded">
-                    <h4 class="mt-2">Nadan Sadya</h4>
-                    <p>cuisne:Indian</p>
-                </div>
-                <div class="col-md-4 p-3">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRjSfAr8B3D8-L9UT6Lx8ENlEY8VJFsvNoRhA&s"
-                        alt="no image" class="w-100 rounded">
-                    <h4 class="mt-2">Nadan Sadya</h4>
-                    <p>cuisne:Indian</p>
-                </div>
+                }
+            }@else {
+                <h1>Loading...</h1>
+            }
             </div>
         </div>
     </div>
