pdfdownload|saveRecipe|view only to loginuser|view single recipe

--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -44,7 +44,7 @@
                 @for (item of allRecipes|search:searchKey
                 | paginate: { itemsPerPage: 6, currentPage: p }; track $index) {
                 <div class="col-md-4 p-3">
-                    <img [src]="item.image" alt="no image" class="w-100 rounded" routerLink="/view/{{item._id}}">
+                    <img (click)="viewRecipe(item._id)" [src]="item.image" alt="no image" class="w-100 rounded" >
                     <h4 class="mt-2">{{item.name}}</h4>
                     <p><b>Cuisne: </b>{{item.cuisine}}</p>
                 </div>
