--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -36,8 +36,9 @@
                     <li><a class="dropdown-item" routerLink="/register">Register</a></li>
                     }
                     @if (isLogin) {
-                    <li><a class="dropdown-item" routerLink="/login">Profile</a></li>
-                    <li><a class="dropdown-item" routerLink="/register">Logout</a></li>
+                    <li><a class="dropdown-item" routerLink="/profile">Profile</a></li>
+                    <li><a class="dropdown-item" routerLink="/saved-recipes">Saved Recipes</a></li>
+                    <li><a class="dropdown-item" (click)="logout()" >Logout</a></li>
                     }
                 </ul>
             </div>
