--- a/src/app/admin/adminusers/adminusers.component.html
+++ b/src/app/admin/adminusers/adminusers.component.html
@@ -13,6 +13,7 @@
             </div>
             <h3 class="text-center my-3">user List</h3>
             <div class="table-responsive px-4 my-5">
+                @if (allUsers.length>0) {
                 <table class="table table-bordered">
                     <thead>
                         <tr>
@@ -23,15 +24,19 @@
                         </tr>
                     </thead>
                     <tbody>
+                        @for (item of allUsers; track $index) {
                         <tr>
-                            <td>1</td>
-                            <td>dumm</td>
-                            <td>dummd</td>
+                            <td>{{$index+1}}</td>
+                            <td>{{item.username}}</td>
+                            <td>{{item.email}}</td>
                         </tr>
+                        }
                     </tbody>
                 </table>
-            </div>
+                }@else {
             <h3 class="text-danger ms-4">NO Users ...</h3>
+                    }
+            </div>
         </div>
     </div>
 </div>
