--- a/src/app/admin/admindownloads/admindownloads.component.html
+++ b/src/app/admin/admindownloads/admindownloads.component.html
@@ -13,6 +13,7 @@
             </div>
             <h3 class="text-center my-3">Download List</h3>
             <div class="table-responsive px-4 my-5">
+                @if (allDownloads.length>0) {
                 <table class="table table-bordered">
                     <thead>
                         <tr>
@@ -25,17 +26,23 @@
                         </tr>
                     </thead>
                     <tbody>
+                        @for (item of allDownloads; track $index) {
                         <tr>
-                            <td>1</td>
-                            <td>dumm</td>
-                            <td>dummd</td>
-                            <td>dummd</td>
-                            <td>dummd</td>
+                            <td >{{$index+1}}</td>
+                            <td class="text-warning">{{item.recipeId}}</td>
+                            <td>{{item.name}}</td>
+                            <td>{{item.cuisine}}</td>
+                            <td>{{item.serv}}</td>
                         </tr>
+                        }
                     </tbody>
                 </table>
-            </div>
+                }@else {
             <h3 class="text-danger ms-4">NO Downloads ...</h3>
+
+                }
+
+            </div>
         </div>
     </div>
 </div>
