--- a/src/app/admin/adminrecipes/adminrecipes.component.html
+++ b/src/app/admin/adminrecipes/adminrecipes.component.html
@@ -13,10 +13,12 @@
             </div>
             <h3 class="text-center my-3">Recipe List</h3>
             <div class="d-flex justify-content-between px-4 mt-4">
-                <button class="btn btn-primary"> Add Recipes <i class="fa-solid fa-plus ms-2"></i></button>
-                <input type="text" placeholder="name " class="form-control w-25">
+                <button data-bs-toggle="modal" data-bs-target="#adminRecipe" class="btn btn-primary"> Add Recipes <i
+                        class="fa-solid fa-plus ms-2"></i></button>
+                <input [(ngModel)]="searchkey" type="text" placeholder="name " class="form-control w-25">
             </div>
             <div class="table-responsive px-4 my-5">
+                @if (allrecipes.length>0) {
                 <table class="table table-bordered">
                     <thead>
                         <tr>
@@ -28,21 +30,193 @@
                         </tr>
                     </thead>
                     <tbody>
+                        @for (item of allrecipes | search:searchkey; track $index) {
                         <tr>
-                            <td>1</td>
-                            <td>dumm</td>
-                            <td>dummd</td>
-                            <td>dumm</td>
+                            <td>{{$index+1}}</td>
+                            <td>{{item.name}}</td>
+                            <td>
+                                <img [src]="item.image" alt="" style="height: 60px;height: 60px;">
+                            </td>
+                            <td>{{item.cuisine}}</td>
                             <td>
                                 <button class="btn btn-outline-primary me-3"><i
                                         class="fa-solid fa-pen-square"></i></button>
                                 <button class="btn btn-outline-danger"><i class="fa-solid fa-trash-can"></i></button>
                             </td>
                         </tr>
+                        }
                     </tbody>
-                </table>
+                </table>}
+                @else {<h3 class="text-danger ms-4">NO Recipes ...</h3>}
+
+
             </div>
-            <h3 class="text-danger ms-4">NO Recipes ...</h3>
+        </div>
+    </div>
+</div>
+
+<!-- <div class="modal fade" id="adminRecipe" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header bg-success">
+        <h1 class="modal-title fs-3 text-light" id="exampleModalLabel">Recipe Details</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="mb-3">
+            <input  type="text" placeholder="Name of the recipe" class="form-control" />
+        </div>
+        <div class="mb-3">
+            <input  type="text" placeholder="Ingredients" class="form-control" />
+        </div>
+        <div class="mb-3">
+            <input  type="text" placeholder="Instructions" class="form-control" />
+        </div>
+        <div class="mb-3">
+            <input  type="text" placeholder="Preparation Time" class="form-control" />
+        </div>
+        <div class="mb-3">
+            <input  type="text" placeholder="Cooking Time" class="form-control" />
+        </div>
+        <div class="mb-3">
+            <input  type="text" placeholder="Servings" class="form-control" />
+        </div>
+        <div class="mb-3">
+            <select name="" id="" class="form-select">
+                <option [defaultSelected]="true" value="">Mode of Cooking</option>
+                <option value="easy">Easy</option>
+                <option value="medium">Medium</option>
+                <option value="hard">Hard</option>
+            </select>
+        </div>
+        <div class="mb-3">
+             <select name="" id="" class="form-select">
+                <option [defaultSelected]="true" value="" disabled>Cuisine Type</option>
+                @for( cuisine of cuisineTypes ;track $index){
+                    <option [value]="cuisine">{{ cuisine }}</option>
+                }
+            </select>
+        </div>
+        <div class="mb-3">
+            <input  type="text" placeholder="Calories" class="form-control" />
+        </div>
+        <div class="mb-3">
+            <input  type="text" placeholder="Ratings" class="form-control" />
+        </div>
+        <div class="mb-3">
+            <select name="" id="" class="form-select">
+                <option [defaultSelected]="true" value="" disabled>Meal Type</option>
+                @for( meal of allMealTypes ;track $index){
+                    <option [value]="meal">{{ meal }}</option>
+                }
+            </select>
+        </div>
+        <div class="mb-3">
+            <input  type="file" placeholder="Recipe Image" class="form-control" />
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Reset</button>
+        <button type="button" class="btn btn-primary">Save</button>
+      </div>
+    </div>
+  </div>
+</div> -->
+
+
+<!-- Modal -->
+<div class="modal fade modal-lg" id="adminRecipe" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header bg-success">
+                <h1 class="modal-title fs-3 " id="exampleModalLabel">Modal title</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="container-fluid">
+                    <!-- 0  -->
+                    <div class="row d-flex justify-content-center align-items-center flex-row">
+                        <div class="col-md-6 mb-3">
+                            <input type="text" placeholder="Name of the recipe" class="form-control" />
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <input type="text" placeholder="Servings" class="form-control" />
+                        </div>
+                    </div>
+                    <!-- 1 -->
+                    <div class="row d-flex justify-content-center align-items-center flex-row">
+                        <div class="col-md-6 mb-3">
+                            <input type="text" placeholder="Preparation Time" class="form-control" />
+
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <input type="text" placeholder="Cooking Time" class="form-control" />
+
+                        </div>
+                    </div>
+                    <!-- 2 -->
+                    <div class="row d-flex justify-content-center align-items-center flex-row">
+                        <div class="col-md-6 mb-3">
+                            <input type="text" placeholder="Calories" class="form-control" />
+
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <input type="text" placeholder="Ratings" class="form-control" />
+
+
+                        </div>
+                    </div>
+
+                    <!-- modeof cooking  -->
+                    <div class="mb-3">
+                        <select name="" id="" class="form-select">
+                            <option [defaultSelected]="true" value="">Mode of Cooking</option>
+                            <option value="easy">Easy</option>
+                            <option value="medium">Medium</option>
+                            <option value="hard">Hard</option>
+                        </select>
+                    </div>
+
+                    <!-- mealtype  -->
+
+                    <ng-multiselect-dropdown class="" [placeholder]="'select'" [settings]="dropdownSettings"
+                        [data]="dropdownList" [(ngModel)]="selectedItems" (onSelect)="onItemSelect($event)" 
+                         (onSelectAll)="onSelectAll($event)">
+                        
+                    </ng-multiselect-dropdown>
+
+
+                    <!-- cusine type  -->
+                    <div class="mb-3 mt-3">
+                        <select name="" id="" class="form-select">
+                            <option [defaultSelected]="true" value="" disabled>Cuisine Type</option>
+                            @for( cuisine of cuisineTypes ;track $index){
+                            <option [value]="cuisine">{{ cuisine }}</option>
+                            }
+                        </select>
+                    </div>
+                    <!-- incredan -->
+                    <div class="mb-3 d-flex align-items-center justify-content-center">
+                        <input type="text" placeholder="Ingredients" class="form-control" />
+                        <button class=" btn bg-success">add</button>
+                    </div>
+                    <div class="mb-3 d-flex align-items-center justify-content-center">
+                        <input type="text" placeholder="Instructions" class="form-control" />
+                        <button class=" btn bg-success">add</button>
+
+                    </div>
+
+                    <div class="mb-3">
+                        <input type="file" placeholder="Recipe Image" class="form-control" />
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="modal-footer p-3">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Reset</button>
+                <button type="button" class="btn btn-primary">Save</button>
+            </div>
         </div>
     </div>
 </div>
